Fix media alignments

--- a/source/assets/stylesheets/_trumps.images.scss
+++ b/source/assets/stylesheets/_trumps.images.scss
@@ -24,6 +24,12 @@
 
   }
 
+  img {
+
+    margin-bottom: 0;
+    
+  }
+
 }
 
 .alignleft {
