--- a/source/assets/stylesheets/_trumps.utilities.scss
+++ b/source/assets/stylesheets/_trumps.utilities.scss
@@ -99,3 +99,12 @@ img.wp-smiley, img.emoji {
     background-color: transparent;
   }
 }
+
+.googlemaps {
+  clear: both;
+
+  iframe {
+    width: 100%;
+    margin-top: 1.5rem;
+  }
+}
